--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -4,14 +4,13 @@
     android:versionName="1.3" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/remicon"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:allowBackup="true">
+        android:label="@string/app_name">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -22,6 +21,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".Preferences" android:label="@string/prefs"></activity>
+        <activity android:name="com.avidandrew.weblauncher.WebLauncherActivity" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>            
+        </activity>
     </application>
 
 </manifest>
