--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -1,33 +1,28 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.rekap.remote"
-    android:versionCode="4"
-    android:versionName="1.3" >
+    package="com.avidandrew.weblauncher"
+    android:versionCode="2"
+    android:versionName="2.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="14"
         android:targetSdkVersion="17" />
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:icon="@drawable/remicon"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity android:name=".Preferences" android:label="@string/prefs"></activity>
-        <activity android:name="com.avidandrew.weblauncher.WebLauncherActivity" android:label="@string/app_name">
+        <activity android:name="com.avidandrew.weblauncher.MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>            
         </activity>
+        <activity
+            android:name="com.rekap.remote.MouseActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity android:name="com.rekap.remote.Preferences" android:label="@string/prefs"></activity>
     </application>
 
 </manifest>
