--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion "23.0.1"
+    compileSdkVersion 14
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.avidandrew.weblauncher"
