--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,22 @@
             android:name="com.rekap.remote.MouseActivity"
             android:label="@string/app_name" >
         </activity>
-        <activity android:name="com.rekap.remote.Preferences" android:label="@string/prefs"></activity>
+        <activity android:name="com.rekap.remote.Preferences" android:label="@string/prefs" ></activity>
+        <activity
+            android:name="tk.nfsmonstr.simplewakeonlan.WOLActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat">
+        </activity>
+        <activity
+            android:name="tk.nfsmonstr.simplewakeonlan.AboutActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat">
+        </activity>
+        <activity
+            android:name="tk.nfsmonstr.simplewakeonlan.AddOrEditServerActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.AppCompat">
+        </activity>
     </application>
 
 </manifest>
