--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,6 @@ android {
 dependencies {
     //compile 'com.android.support:support-v4:18.0.0'
     compile 'com.android.support:appcompat-v7:26.0.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.0.0'
 }
